[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = [ "cargo" ] }
failure = {version = "0.1.8"}
serde = { version = "1.0.185", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["std"] }



[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
tempfile = "3.0.7"
walkdir = "2.2.7"

[lib]
test = false
doctest = false
